--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@nextui-org/react": "^2.2.9",
+        "framer-motion": "^11.0.8",
+        "react-icons": "^5.0.1"
     }
 }
