--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     },
     "dependencies": {
         "@nextui-org/react": "^2.2.9",
+        "@reduxjs/toolkit": "^2.2.1",
         "framer-motion": "^11.0.8",
-        "react-icons": "^5.0.1"
+        "react-icons": "^5.0.1",
+        "react-redux": "^9.1.0"
     }
 }
