--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "embla-carousel-react": "^7.1.0",
         "framer-motion": "^11.0.8",
         "lodash": "^4.17.21",
+        "moment": "^2.30.1",
         "react-icons": "^5.0.1",
         "react-redux": "^9.1.0",
         "recharts": "^2.12.2"
