--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@mantine/hooks": "^7.6.1",
         "@nextui-org/react": "^2.2.9",
         "@reduxjs/toolkit": "^2.2.1",
+        "copy-text-to-clipboard": "^3.2.0",
         "embla-carousel-react": "^7.1.0",
         "framer-motion": "^11.0.8",
         "lodash": "^4.17.21",
